# jcode

./: .commit_msg.md  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  OAUTH.md  README.md  TELEMETRY.md  libcomposer.rlib
.cargo/: config.toml
.github/workflows/: ci.yml  discord-release.yml  freebsd-smoke.yml  release.yml  require-issue.yml
.pi-lens/: change-log.jsonl  code-quality-warnings.jsonl  metrics-history.json  turn-state.json
.pi-lens/cache/: code-quality-warnings.json  code-quality-warnings.meta.json  knip.meta.json  project-snapshot.json  project-snapshot.meta.json  review-graph.json  session-start-guidance.meta.json  todo-baseline.json  todo-baseline.meta.json  turn-end-findings-last.json  turn-end-findings-last.meta.json  turn-end-findings.meta.json
.ralph/: lobehub-ui-polish.md  lobehub-ui-polish.state.json
assets/app-icons/: Jcode.icns
changelog/: index.json
crates/jcode-agent-runtime/: Cargo.toml
crates/jcode-app-core/: Cargo.toml
crates/jcode-azure-auth/: Cargo.toml
crates/jcode-base/: Cargo.toml
crates/jcode-build-meta/: Cargo.toml  build.rs
crates/jcode-config-types/: Cargo.toml
crates/jcode-desktop/: AGENTS.md  Cargo.toml
crates/jcode-embedding/: Cargo.toml
crates/jcode-gui/: Cargo.toml
crates/jcode-gui/src/: agent_status.rs  app.rs  composer.rs  file_popup.rs  gui_backend.rs  gui_state.rs  lib.rs  main.rs  message_list.rs  session_list.rs  slash_popup.rs  swarm_board.rs  theme.rs
crates/jcode-import-core/: Cargo.toml
crates/jcode-logging/: Cargo.toml
crates/jcode-memory-types/: Cargo.toml
crates/jcode-notify-email/: Cargo.toml
crates/jcode-plan/: Cargo.toml
crates/jcode-productivity-core/: Cargo.toml
crates/jcode-provider-anthropic/: Cargo.toml
crates/jcode-provider-antigravity/: Cargo.toml
crates/jcode-provider-bedrock/: Cargo.toml
crates/jcode-provider-copilot/: Cargo.toml
crates/jcode-provider-core/: Cargo.toml
crates/jcode-provider-env/: Cargo.toml
crates/jcode-provider-gemini/: Cargo.toml
crates/jcode-provider-openai/: Cargo.toml
crates/jcode-provider-openrouter/: Cargo.toml
crates/jcode-render-core/: Cargo.toml
crates/jcode-session-types/: Cargo.toml
crates/jcode-setup-hints/: Cargo.toml
crates/jcode-telemetry-core/: Cargo.toml
crates/jcode-terminal-image/: Cargo.toml
crates/jcode-tui-account-picker/: Cargo.toml
crates/jcode-tui-anim/: Cargo.toml
crates/jcode-tui-markdown/: Cargo.toml
crates/jcode-tui-markdown/src/: lib.rs  markdown_context.rs  markdown_incremental.rs  markdown_latex_image.rs  markdown_mermaid_fallback.rs  markdown_render_full.rs  markdown_render_lazy.rs  markdown_render_support.rs  markdown_text_preprocess.rs  markdown_types.rs  render_core_adapter.rs  render_core_adapter_tests.rs
crates/jcode-tui-markdown/src/markdown_tests/cases/: rendering.rs  wrapping_currency.rs
desktop-app/: index.html  package-lock.json  package.json  pnpm-lock.yaml
desktop-app/src/: App.css  (+2 more)
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/src/: commands.rs  lib.rs  main.rs
docs/: AUTH_CREDENTIAL_SOURCES.md  CODE_QUALITY_TODO.md  COMPILE_PERFORMANCE_PLAN.md  COMPILE_TIME_ISOLATION_REFACTOR.md  DESKTOP_APP_ARCHITECTURE.md  DESKTOP_BUILD_OUT_PLAN.md  DESKTOP_STABLE_HOST_RELOAD_STARTUP.md  GMAIL_COMPOSIO_BACKEND.md  HOOKS.md  IOS_APP.md  MEMORY_GRAPH_PLAN.md  MODULAR_ARCHITECTURE_RFC.md  ONBOARDING_SANDBOX.md  OPENAI_COMPATIBLE_PROFILE_RUNTIME_PLAN.md  PROVIDER_DOCTOR.md  RESUME_BEHAVIOR.md  SECURITY_DEPENDENCIES.md  SWARM_ARCHITECTURE.md  SWARM_TASK_GRAPH.md
examples/: bench_anthropic_essay_tps.rs  pricing_e2e_check.rs
ios/: .gitignore  Package.swift  project.yml
jcode-app/: .gitignore  AGENTS.md  CLAUDE.md  SLACK_MODE_REVIEW.md  TODO.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
jcode-app/src-tauri/: Cargo.toml  tauri.conf.json
jcode-app/src-tauri/.pi-lens/cache/: review-graph.json
jcode-app/src-tauri/capabilities/: default.json
jcode-app/src-tauri/icons/: icon.icns
jcode-app/src-tauri/src/: calc.rs  commands.rs  error.rs  launcher.rs  lib.rs  main.rs  open_file.rs  search.rs  server_client.rs  utils.rs
jcode-app/src-tauri/src/commands/: config.rs  env.rs  launcher.rs  memory.rs  provider.rs  session.rs  swarm.rs  system.rs  tools.rs
scripts/: analyze_openai_ws_cache.py  analyze_root_crate.py  antigravity_live_coverage.sh  bench_memory_cli.py  bench_startup_visible_ready.py  build_linux_compat.sh  clean_target.sh  code_size_budget.json  compile_isolation_report.py  compile_time_probe.sh  desktop_gallery_golden.py  desktop_journey_e2e.sh  desktop_reload_window_e2e.sh  dev_cargo.sh  install.ps1  install.sh  install_release.sh  onboarding_sandbox.sh  panic_budget.json  post_discord_release.py  profile_spawn.py  quick-release.sh  reload_recovery_audit.py  remote_build.sh  repro_expand_edit_shortcut.py  repro_live_duplicate.py  security_preflight.sh  stale_server_upgrade_sandbox.sh  swallowed_error_budget.json  test_install_conversion.sh  test_post_discord_release.py  test_size_budget.json  update_packages.sh  verify_alt_shift_e_reaches_terminal.sh  widget_quality.py
scripts/repro/tls-bad-record-mac/: Cargo.toml  README.md
scripts/repro/tls-bad-record-mac/src/: main.rs
src/: agent.rs  agent_tests.rs  ambient_tests.rs  browser.rs  bus.rs  cache_tracker.rs  catchup.rs  compaction.rs  compaction_tests.rs  config.rs  config_tests.rs  copilot_usage.rs  generated_image.rs  import.rs  lib.rs  live_tests.rs  logging.rs  main.rs  memory.rs  memory_agent.rs  message.rs  mission.rs  network_retry.rs  prefix_cache_stable.rs  process_title.rs  prompt.rs  prompt_tests.rs  provider_catalog.rs  provider_catalog_tests.rs  restart_snapshot.rs  server.rs  session.rs  setup_hints.rs  setup_hints_tests.rs  subscription_catalog.rs  telemetry.rs  telemetry_state.rs  todo.rs  update.rs
subscription-worker/: README.md  package.json  schema.sql  wrangler.toml
telemetry-worker/: README.md  dau.sql  health.sql  package.json  schema.sql  users.sql  wrangler.toml
tests/: auth_login_flow.rs  provider_matrix.rs
(+1356 files in other folders)
