[package]
name = "desktop-app"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "jcode_desktop_tauri_lib"

[[bin]]
name = "desktop-app"
path = "src/main.rs"

[dependencies]
anyhow = "1"
jcode = { path = "../../" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11", features = [] }
tauri-plugin-dialog = "2.5"
tokio = { version = "1", features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "sync"
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
