[package]
name = "jcode-app"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "jcode_app_lib"

[[bin]]
name = "jcode-app"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
jcode = { path = "../../" }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tauri = { version = "2.11", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.5"
tokio = { version = "1", features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
