[package]
name = "tls-bad-record-mac-repro"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone: do not attach to the parent jcode workspace.
[workspace]

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rcgen = "0.13"
reqwest = { version = "=0.12.28", default-features = false, features = ["json","stream","blocking","charset","http2","system-proxy","rustls-tls","rustls-tls-native-roots"] }

[[bin]]
name = "tls-bad-record-mac-repro"
path = "src/main.rs"
